Fix GlobeHero container CSS and right-side globe alignment

--- a/user/components/GlobeHero.module.css
+++ b/user/components/GlobeHero.module.css
@@ -1,8 +1,5 @@
 .container {
-  position: absolute;
-  right: -50px;
-  top: 50%;
-  transform: translateY(-50%);
+  position: relative;
   width: 500px;
   height: 500px;
   pointer-events: none;
